--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,6 @@
+# Ignore IDE config
+.idea
+
 # See https://help.github.com/articles/ignoring-files/ for more about ignoring files.
 
 # dependencies
